adicionar interação funcionando