@@ -15,16 +15,29 @@ public class InteracaoMedicamentosaService {
     @Autowired MedicamentoService medicamentoService;
 
     public Optional<InteracaoMedicamentosa> getInteracao(String medA, String medB){
-        LinkedList<Medicamento> medicamentos = medicamentoService.getMedicamentos(medA, medB);
-        List<InteracaoMedicamentosa> interacoesmedicamentoA= interacaoMedicamentosaRepository.findByIdMedicamentoA(medicamentos.get(0).getId());
-        return interacoesmedicamentoA.stream().filter(it -> it.getIdMedicamentob() == medicamentos.get(1).getId())
-                .reduce((m, v) ->{ throw new NoSuchElementException();});
+        LinkedList<Medicamento> meds = medicamentoService.getMedicamentos(medA, medB);
+        Optional<InteracaoMedicamentosa> interactions = interacaoMedicamentosaRepository.findInteraction(meds.getFirst().getId(), meds.getLast().getId());
+        return interactions;
     }
 
     public List<Long> getInteractionList(Long id){
-        return interacaoMedicamentosaRepository.findAll().stream()
-                .filter(med ->  med.getIdMedicamentoA()==id)
-                .map(InteracaoMedicamentosa::getIdMedicamentob)
-                .collect(Collectors.toList());
+//        return interacaoMedicamentosaRepository.findAll().stream()
+//                .filter(med ->  med.getIdMedicamentoA()==id)
+//                .map(InteracaoMedicamentosa::getIdMedicamentob)
+//                .collect(Collectors.toList());
+        ArrayList<Long> listaIds = new ArrayList<Long>();
+        interacaoMedicamentosaRepository.findAllInteractions(id).stream()
+                .forEach(e->{
+                    if(e.getIdMedicamentoA()!=id)
+                        listaIds.add(e.getIdMedicamentoA());
+                    else
+                        listaIds.add(e.getIdMedicamentob());
+                });
+        System.out.println(listaIds.size());
+        return listaIds;
+    }
+
+    public void saveInteraction(String descricao,long idMedA, long idMedB){
+          interacaoMedicamentosaRepository.save(new InteracaoMedicamentosa(descricao,idMedA,idMedB));
     }
 }
